<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    tools:context=".ui.onboarding.bioinfo.BioInfoFragment">

    <TextView
        android:id="@+id/tv_view_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="26dp"
        android:text="@string/bio_info_input_hint"
        android:textAppearance="@style/body2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_gender_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/bio_info_gender_label"
        android:textAppearance="@style/title2"
        app:layout_constraintStart_toStartOf="@id/tv_view_label"
        app:layout_constraintTop_toBottomOf="@id/tv_view_label" />

    <TextView
        android:id="@+id/tv_gender_male"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/selector_onboarding_bio_info"
        android:gravity="center"
        android:text="@string/bio_info_gender_male"
        android:textAppearance="@style/title3"
        android:textColor="@color/gray_400"
        app:layout_constraintEnd_toStartOf="@id/tv_gender_female"
        app:layout_constraintStart_toStartOf="@id/tv_gender_label"
        app:layout_constraintTop_toBottomOf="@id/tv_gender_label" />

    <TextView
        android:id="@+id/tv_gender_female"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/selector_onboarding_bio_info"
        android:gravity="center"
        android:text="@string/bio_info_gender_female"
        android:textAppearance="@style/title3"
        android:textColor="@color/gray_400"
        app:layout_constraintBottom_toBottomOf="@id/tv_gender_male"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_gender_male"
        app:layout_constraintTop_toTopOf="@id/tv_gender_male" />

    <TextView
        android:id="@+id/tv_weight_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/bio_info_weight_label"
        android:textAppearance="@style/title2"
        app:layout_constraintStart_toStartOf="@id/tv_gender_male"
        app:layout_constraintTop_toBottomOf="@id/tv_gender_male" />

    <TextView
        android:id="@+id/tv_weight"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_common_rectangle_stroke_8dp"
        android:backgroundTint="@color/gray_200"
        android:gravity="center"
        android:text="@string/bio_info_weight_hint"
        android:textAppearance="@style/title3"
        android:textColor="@color/gray_400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_weight_label" />


    <TextView
        android:id="@+id/tv_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/selector_common_button_enabled"
        android:enabled="false"
        android:gravity="center"
        android:paddingVertical="12dp"
        android:text="@string/onboarding_next_step"
        android:textAppearance="@style/title2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
