<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.settingbioinfo.SettingBioInfoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_setting_bio_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:contentInsetStart="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/white"
            android:importantForAccessibility="no"
            android:padding="12dp"
            android:src="@drawable/ic_setting_prev" />

        <TextView
            android:id="@+id/tv_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/setting_bio_info_toolbar_title"
            android:textAppearance="@style/title2"
            android:textColor="@color/gray_400" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb_setting_bio_info" />

    <TextView
        android:id="@+id/tv_gender_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="34dp"
        android:text="@string/bio_info_gender_label"
        android:textAppearance="@style/title2"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb_setting_bio_info" />

    <TextView
        android:id="@+id/tv_gender_male"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/selector_onboarding_bio_info"
        android:gravity="center"
        android:text="@string/bio_info_gender_male"
        android:textAppearance="@style/title3"
        android:textColor="@color/gray_400"
        app:layout_constraintEnd_toStartOf="@id/tv_gender_female"
        app:layout_constraintStart_toStartOf="@id/tv_gender_label"
        app:layout_constraintTop_toBottomOf="@id/tv_gender_label" />

    <TextView
        android:id="@+id/tv_gender_female"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/selector_onboarding_bio_info"
        android:gravity="center"
        android:text="@string/bio_info_gender_female"
        android:textAppearance="@style/title3"
        android:textColor="@color/gray_400"
        app:layout_constraintBottom_toBottomOf="@id/tv_gender_male"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_gender_male"
        app:layout_constraintTop_toTopOf="@id/tv_gender_male" />

    <TextView
        android:id="@+id/tv_weight_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/bio_info_weight_label"
        android:textAppearance="@style/title2"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/tv_gender_male"
        app:layout_constraintTop_toBottomOf="@id/tv_gender_male" />

    <TextView
        android:id="@+id/tv_weight"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_common_rectangle_stroke_8dp"
        android:backgroundTint="@color/gray_200"
        android:gravity="center"
        android:text="@string/bio_info_weight_hint"
        android:textAppearance="@style/title3"
        android:textColor="@color/gray_400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_weight_label" />

    <TextView
        android:id="@+id/tv_health_connect_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/setting_bio_info_health_connect_label"
        android:textAppearance="@style/title2"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/tv_weight"
        app:layout_constraintTop_toBottomOf="@id/tv_weight" />

    <LinearLayout
        android:id="@+id/ll_health_connect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="6dp"
        android:paddingStart="24dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_health_connect_label">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_bio_info_health_connect_description"
            android:textAppearance="@style/body2"
            android:textColor="@color/black" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            android:src="@drawable/ic_setting_next" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/bg_common_rectangle_8dp"
        android:backgroundTint="@color/selector_save_background"
        android:gravity="center"
        android:paddingVertical="12dp"
        android:text="@string/setting_save"
        android:textAppearance="@style/title2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
