<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    tools:context=".ui.onboarding.targetamount.TargetAmountFragment">

    <TextView
        android:id="@+id/tv_view_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="26dp"
        android:text="@string/target_amount_input_hint"
        android:textAppearance="@style/body2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_input_goal"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bg_common_rectangle_stroke_8dp"
        android:backgroundTint="@color/gray_400"
        android:hint="@string/setting_target_amount_hint_input_goal"
        android:imeOptions="actionDone|flagNoEnterAction"
        android:inputType="number"
        android:maxLength="5"
        android:maxLines="1"
        android:paddingVertical="10dp"
        android:paddingStart="16dp"
        android:paddingEnd="42dp"
        android:textAppearance="@style/body2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_view_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:text="@string/setting_target_amount_unit_ml"
        android:textAppearance="@style/title2"
        app:layout_constraintBottom_toBottomOf="@id/et_input_goal"
        app:layout_constraintEnd_toEndOf="@id/et_input_goal"
        app:layout_constraintTop_toTopOf="@id/et_input_goal" />

    <TextView
        android:id="@+id/tv_target_amount_warning_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="7dp"
        android:text="@string/setting_target_amount_warning_too_much"
        android:textAppearance="@style/label1"
        android:textColor="@color/secondary_200"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/et_input_goal"
        app:layout_constraintTop_toBottomOf="@id/et_input_goal" />


    <TextView
        android:id="@+id/tv_recommended_target_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="58dp"
        android:text="@string/target_amount_recommended_water_goal"
        android:textAppearance="@style/body3"
        android:textColor="@color/gray_400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_input_goal" />

    <TextView
        android:id="@+id/tv_recommended_target_amount_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/target_amount_recommended_description"
        android:textAppearance="@style/body5"
        android:textColor="@color/gray_200"
        app:layout_constraintStart_toStartOf="@id/tv_recommended_target_amount"
        app:layout_constraintTop_toBottomOf="@id/tv_recommended_target_amount" />

    <TextView
        android:id="@+id/tv_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/selector_common_button_enabled"
        android:enabled="false"
        android:gravity="center"
        android:paddingVertical="12dp"
        android:text="@string/onboarding_complete"
        android:textAppearance="@style/title2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
