<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    tools:context=".ui.onboarding.nickname.NicknameFragment">

    <TextView
        android:id="@+id/tv_view_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="26dp"
        android:text="@string/nickname_input_hint"
        android:textAppearance="@style/body2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_input_nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@drawable/bg_common_rectangle_stroke_8dp"
        android:hint="@string/setting_nickname_hint_input_nickname"
        android:imeOptions="actionDone|flagNoEnterAction"
        android:maxLines="1"
        android:paddingHorizontal="12dp"
        android:paddingVertical="10dp"
        android:textAppearance="@style/body3"
        android:textColor="@color/gray_400"
        android:textColorHint="@color/gray_300"
        app:layout_constraintEnd_toStartOf="@id/tv_check_duplicate"
        app:layout_constraintStart_toStartOf="@id/tv_view_label"
        app:layout_constraintTop_toBottomOf="@id/tv_view_label" />

    <TextView
        android:id="@+id/tv_check_duplicate"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_common_rectangle_8dp"
        android:backgroundTint="@color/gray_200"
        android:enabled="false"
        android:gravity="center"
        android:paddingHorizontal="12dp"
        android:text="@string/setting_nickname_check_duplicate"
        android:textAppearance="@style/title3"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/et_input_nickname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/et_input_nickname"
        app:layout_constraintTop_toTopOf="@id/et_input_nickname" />

    <TextView
        android:id="@+id/tv_nickname_validation_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/label1"
        android:textColor="@color/secondary_200"
        app:layout_constraintStart_toStartOf="@id/et_input_nickname"
        app:layout_constraintTop_toBottomOf="@id/et_input_nickname"
        tools:text="@string/setting_nickname_warning_duplicated_nickname" />

    <TextView
        android:id="@+id/tv_next"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_margin="24dp"
        android:background="@drawable/bg_common_rectangle_8dp"
        android:backgroundTint="@color/gray_200"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/onboarding_next_step"
        android:textAppearance="@style/title2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
