<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_common_rectangle_14dp"
    android:backgroundTint="@color/white"
    tools:context=".ui.onboarding.dialog.CompleteDialogFragment">

    <ImageView
        android:id="@+id/iv_onboarding_complete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/onboarding_complete_greeting"
        android:textAppearance="@style/title1"
        android:textColor="@color/gray_400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_onboarding_complete" />

    <TextView
        android:id="@+id/tv_complete_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/onboarding_complete_description"
        android:textAppearance="@style/body2"
        android:textColor="@color/gray_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_greeting" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/bg_common_rectangle_8dp"
        android:backgroundTint="@color/primary_100"
        android:gravity="center"
        android:text="@string/onboarding_complete"
        android:textAppearance="@style/body4"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_complete_description" />
</androidx.constraintlayout.widget.ConstraintLayout>
